--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Godot.NET.Sdk/3.3.0">
 	<PropertyGroup>
 		<TargetFramework>net472</TargetFramework>
+		<AssemblyName>GoTiled.$(MSBuildProjectName)</AssemblyName>
+		<RootNamespace>GoTiled.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 	</PropertyGroup>
 </Project>
