--- a/GoTiled.Utils/GoTiled.Utils.csproj
+++ b/GoTiled.Utils/GoTiled.Utils.csproj
@@ -1,4 +1,5 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -6,8 +7,11 @@
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
 	</PropertyGroup>
+
 	<ItemGroup>
-	  <ProjectReference Include="..\GoTiled.Map\GoTiled.Map.csproj" />
-	  <ProjectReference Include="..\GoTiled.Utils\GoTiled.Utils.csproj" />
+		<Compile Remove="NewFolder\**" />
+		<EmbeddedResource Remove="NewFolder\**" />
+		<None Remove="NewFolder\**" />
 	</ItemGroup>
+
 </Project>
