--- a/GoTiled.Core/GoTiled.Core.csproj
+++ b/GoTiled.Core/GoTiled.Core.csproj
@@ -5,5 +5,8 @@
 		<Nullable>enable</Nullable>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/GoTiled/GoTiled</RepositoryUrl>
 	</PropertyGroup>
 </Project>
