--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: Publish
+      shell: bash
+      env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
+          DOTNET_CLI_TELEMETRY_OPTOUT: true
+      run: |
+        dotnet tool restore
+        VERSION=$(dotnet minver --tag-prefix=v --verbosity=error -d=preview)
+        dotnet cake --target="Publish" --buildversion="$VERSION"
