--- a/GoTiled.Astar/GoTiled.Astar.csproj
+++ b/GoTiled.Astar/GoTiled.Astar.csproj
@@ -5,6 +5,9 @@
 		<Nullable>enable</Nullable>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/GoTiled/GoTiled</RepositoryUrl>
 	</PropertyGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\GoTiled.Map\GoTiled.Map.csproj" />
