--- a/GoTiled.Utils/GoTiled.Utils.csproj
+++ b/GoTiled.Utils/GoTiled.Utils.csproj
@@ -6,6 +6,9 @@
 		<Nullable>enable</Nullable>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/GoTiled/GoTiled</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
