change collect value

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --collect "XPlat Code Coverage"
+      run: dotnet test --no-build --collect "Code Coverage"
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
