--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,22 +20,24 @@ jobs:
         dotnet-version: |
           6.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: |
+        dotnet restore
+        dotnet tool restore
+    
+    - name: Sonar Begin
+      run: dotnet sonarscanner begin /key:GoTiled_GoTiled /d:sonar.login=${{ secrets.SONAR_TOKEN }}
     - name: Build
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --collect "Code Coverage"
-    - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: Sonar End
+      run: dotnet sonarscanner end /d:sonar.login=${{ secrets.SONAR_TOKEN }}
+
     - name: Publish
       shell: bash
       env:
           NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
           DOTNET_CLI_TELEMETRY_OPTOUT: true
       run: |
-        dotnet tool restore
         VERSION=$(dotnet minver --verbosity=error -d=preview)
         dotnet cake --target="Publish" --buildversion="$VERSION"
