--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         dotnet tool restore
     
     - name: Sonar Begin
-      run: dotnet sonarscanner begin /key:GoTiled_GoTiled /d:sonar.login=${{ secrets.SONAR_TOKEN }}
+      run: dotnet sonarscanner begin /key:GoTiled_GoTiled /d:sonar.host.url=https://sonarcloud.io /o:gotiled /d:sonar.login=${{ secrets.SONAR_TOKEN }}
     - name: Build
       run: dotnet build --no-restore
     - name: Test
