--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,15 @@ jobs:
         dotnet tool restore
     
     - name: Sonar Begin
-      run: dotnet sonarscanner begin /key:GoTiled_GoTiled /d:sonar.host.url=https://sonarcloud.io /o:gotiled /d:sonar.login=${{ secrets.SONAR_TOKEN }}
+      run: dotnet sonarscanner begin /key:GoTiled_GoTiled /d:sonar.host.url=https://sonarcloud.io /o:gotiled /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.sources=.
     - name: Build
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --collect "Code Coverage"
     - name: Sonar End
       run: dotnet sonarscanner end /d:sonar.login=${{ secrets.SONAR_TOKEN }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish
       shell: bash
