Restructure for Sonar

--- a/Tests/GoTiled.Astar.Tests/GoTiled.Astar.Tests.csproj
+++ b/Tests/GoTiled.Astar.Tests/GoTiled.Astar.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GoTiled.Astar\GoTiled.Astar.csproj" />
+    <ProjectReference Include="..\..\Src\GoTiled.Astar\GoTiled.Astar.csproj" />
   </ItemGroup>
 
 </Project>
