--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,13 @@ jobs:
         dotnet tool restore
     
     - name: Sonar Begin
-      run: dotnet sonarscanner begin /key:GoTiled_GoTiled /d:sonar.host.url=https://sonarcloud.io /o:gotiled /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.sources=.
+      run: dotnet sonarscanner begin \
+        /o:gotiled \
+        /key:GoTiled_GoTiled \
+        /d:sonar.host.url=https://sonarcloud.io \
+        /d:sonar.login=${{ secrets.SONAR_TOKEN }} \
+        /d:sonar.sources=./Src/
+        /d:sonar.tests=./Tests/
     - name: Build
       run: dotnet build --no-restore
     - name: Test
