--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,11 +25,13 @@ jobs:
         dotnet tool restore
     
     - name: Sonar Begin
-      run: dotnet sonarscanner begin /o:gotiled /key:GoTiled_GoTiled /d:sonar.host.url=https://sonarcloud.io /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.cs.opencover.reportsPaths=./Tests/**/TestResults/**/*.coverage
+      run: dotnet sonarscanner begin /o:gotiled /key:GoTiled_GoTiled /d:sonar.host.url=https://sonarcloud.io /d:sonar.login=${{ secrets.SONAR_TOKEN }} /d:sonar.coverageReportPaths=./SonarQube.xml
     - name: Build
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --collect "XPlat Code Coverage"
+    - name: Coverage
+      run: dotnet reportgenerator -reports:./Tests/**/TestResults/**/coverage.cobertura.xml -targetdir:. -reporttypes:SonarQube
     - name: Sonar End
       run: dotnet sonarscanner end /d:sonar.login=${{ secrets.SONAR_TOKEN }}
       env:
