--- a/Tests/GoTiled.Core.Tests/GoTiled.Core.Tests.csproj
+++ b/Tests/GoTiled.Core.Tests/GoTiled.Core.Tests.csproj
@@ -29,7 +29,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Src\GoTiled.Astar\GoTiled.Astar.csproj" />
+	  <ProjectReference Include="..\..\Src\GoTiled.Core\GoTiled.Core.csproj" />
 	</ItemGroup>
 
 </Project>
